[package]
name = "plankton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
model-proc-macro = { path = "./model-proc-macro" }
syn = "2.0.48"
